--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="left-text col-lg-6 col-md-12 col-sm-12 col-xs-12"
                          data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <h1>APE 猩猩保護貼</h1>
+                        <h1><em>APE</em>猩猩保護貼</h1>
                         <p>愛怎麼玩，就怎麼玩，APE是您最佳的夥伴</p>
                         <a href="#about" class="main-button-slider">我想摔不怕</a>
                     </div>
