--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
         </div>
     </div>
     <!-- ***** Preloader End ***** -->
-
-
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
         <div class="container">
@@ -49,7 +47,8 @@
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">首頁</a></li>
                             <li class="scroll-to-section"><a href="#about" class="menu-item">尋找經銷商</a></li>
-                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">防偽驗證</a>
+                            <li class="scroll-to-section">
+                                <a href="#testimonials" class="menu-item">防偽驗證</a>
                             </li>
                             <li class="submenu">
                                 <a href="javascript:;">保固申請</a>
@@ -72,8 +71,6 @@
         </div>
     </header>
     <!-- ***** Header Area End ***** -->
-
-
     <!-- ***** Welcome Area Start ***** -->
     <div class="welcome-area" id="welcome">
 
@@ -93,13 +90,12 @@
         <!-- ***** Header Text End ***** -->
     </div>
     <!-- ***** Welcome Area End ***** -->
-
     <!-- ***** Features Big Item Start ***** -->
     <section class="section" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12"
-                    data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                     data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <div class="features-item">
                         <div class="features-icon">
                             <h2>01</h2>
@@ -113,7 +109,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12"
-                    data-scroll-reveal="enter bottom move 30px over 0.6s after 0.4s">
+                     data-scroll-reveal="enter bottom move 30px over 0.6s after 0.4s">
                     <div class="features-item">
                         <div class="features-icon">
                             <h2>02</h2>
@@ -127,7 +123,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12"
-                    data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
+                     data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
                     <div class="features-item">
                         <div class="features-icon">
                             <h2>03</h2>
@@ -152,7 +148,7 @@
         <div class="container">
             <div class="row">
                 <div class="left-image col-lg-5 col-md-12 col-sm-12 mobile-bottom-fix-big"
-                    data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                     data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <img src="assets/images/left-image.png" class="rounded img-fluid d-block mx-auto" alt="App">
                 </div>
                 <div class="right-text offset-lg-1 col-lg-6 col-md-12 col-sm-12 mobile-bottom-fix">
@@ -161,27 +157,34 @@
                             <img src="assets/images/about-icon-01.png" alt="">
                             <div class="text">
                                 <h4>Vestibulum pulvinar rhoncus</h4>
-                                <p>Please do not redistribute this template ZIP file for a download purpose. You may <a
-                                rel="nofollow" href="https://templatemo.com/contact" target="_parent">contact</a> us for
-                            additional licensing of our template or to get a PSD file.</p>
+                                <p>
+                                    Please do not redistribute this template ZIP file for a download purpose. You may <a rel="nofollow" href="https://templatemo.com/contact" target="_parent">contact</a> us for
+                                    additional licensing of our template or to get a PSD file.
+                                </p>
                             </div>
                         </li>
                         <li data-scroll-reveal="enter right move 30px over 0.6s after 0.5s">
                             <img src="assets/images/about-icon-02.png" alt="">
                             <div class="text">
                                 <h4>Sed blandit quam in velit</h4>
-                                <p>You can <a rel="nofollow"
-                                        href="https://templatemo.com/tm-540-lava-landing-page">download Lava
-                                        Template</a> from our website. Duis viverra, ipsum et scelerisque placerat, orci
-                                    magna consequat ligula.</p>
+                                <p>
+                                    You can <a rel="nofollow"
+                                               href="https://templatemo.com/tm-540-lava-landing-page">
+                                        download Lava
+                                        Template
+                                    </a> from our website. Duis viverra, ipsum et scelerisque placerat, orci
+                                    magna consequat ligula.
+                                </p>
                             </div>
                         </li>
                         <li data-scroll-reveal="enter right move 30px over 0.6s after 0.6s">
                             <img src="assets/images/about-icon-03.png" alt="">
                             <div class="text">
                                 <h4>Aenean faucibus venenatis</h4>
-                                <p>Phasellus in imperdiet felis, eget vestibulum nulla. Aliquam nec dui nec augue
-                                    maximus porta. Curabitur tristique lacus.</p>
+                                <p>
+                                    Phasellus in imperdiet felis, eget vestibulum nulla. Aliquam nec dui nec augue
+                                    maximus porta. Curabitur tristique lacus.
+                                </p>
                             </div>
                         </li>
                     </ul>
@@ -200,12 +203,14 @@
                 <div class="col-lg-8 offset-lg-2">
                     <div class="center-heading">
                         <h2>What They Think <em>About Us</em></h2>
-                        <p>Suspendisse vitae laoreet mauris. Fusce a nisi dapibus, euismod purus non, convallis odio.
-                            Donec vitae magna ornare, pellentesque ex vitae, aliquet urna.</p>
+                        <p>
+                            Suspendisse vitae laoreet mauris. Fusce a nisi dapibus, euismod purus non, convallis odio.
+                            Donec vitae magna ornare, pellentesque ex vitae, aliquet urna.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-10 col-md-12 col-sm-12 mobile-bottom-fix-big"
-                    data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                     data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <div class="owl-carousel owl-theme">
                         <div class="item service-item">
                             <div class="author">
@@ -220,8 +225,10 @@
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
                                 <h4>Jonathan Smart</h4>
-                                <p>“Nullam hendrerit, elit a semper pharetra, ipsum nibh tristique tortor, in tempus
-                                    urna elit in mauris.”</p>
+                                <p>
+                                    “Nullam hendrerit, elit a semper pharetra, ipsum nibh tristique tortor, in tempus
+                                    urna elit in mauris.”
+                                </p>
                                 <span>Besta CTO</span>
                             </div>
                         </div>
@@ -238,8 +245,10 @@
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
                                 <h4>Martino Tino</h4>
-                                <p>“Morbi non mi luctus felis molestie scelerisque. In ac libero viverra, placerat est
-                                    interdum, rhoncus leo.”</p>
+                                <p>
+                                    “Morbi non mi luctus felis molestie scelerisque. In ac libero viverra, placerat est
+                                    interdum, rhoncus leo.”
+                                </p>
                                 <span>Web Analyst</span>
                             </div>
                         </div>
@@ -254,8 +263,10 @@
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
                                 <h4>George Tasa</h4>
-                                <p>“Fusce rutrum in dolor sit amet lobortis. Ut at vehicula justo. Donec quam dolor,
-                                    congue a fringilla sed, maximus et urna.”</p>
+                                <p>
+                                    “Fusce rutrum in dolor sit amet lobortis. Ut at vehicula justo. Donec quam dolor,
+                                    congue a fringilla sed, maximus et urna.”
+                                </p>
                                 <span>System Admin</span>
                             </div>
                         </div>
@@ -271,8 +282,10 @@
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
                                 <h4>Sir James</h4>
-                                <p>"Fusce rutrum in dolor sit amet lobortis. Ut at vehicula justo. Donec quam dolor,
-                                    congue a fringilla sed, maximus et urna."</p>
+                                <p>
+                                    "Fusce rutrum in dolor sit amet lobortis. Ut at vehicula justo. Donec quam dolor,
+                                    congue a fringilla sed, maximus et urna."
+                                </p>
                                 <span>New Villager</span>
                             </div>
                         </div>
@@ -283,53 +296,23 @@
     </section>
     <!-- ***** Testimonials Ends ***** -->
 
-
     <!-- ***** Footer Start ***** -->
     <footer id="contact-us">
         <div class="container">
             <div class="footer-content">
                 <div class="row">
-                    <!-- ***** Contact Form Start ***** -->
-                    <div class="col-lg-6 col-md-12 col-sm-12">
-                        <div class="contact-form">
-                            <form id="contact" action="" method="post">
-                                <div class="row">
-                                    <div class="col-md-6 col-sm-12">
-                                        <fieldset>
-                                            <input name="name" type="text" id="name" placeholder="Full Name" required=""
-                                                style="background-color: rgba(250,250,250,0.3);">
-                                        </fieldset>
-                                    </div>
-                                    <div class="col-md-6 col-sm-12">
-                                        <fieldset>
-                                            <input name="email" type="text" id="email" placeholder="E-Mail Address"
-                                                required="" style="background-color: rgba(250,250,250,0.3);">
-                                        </fieldset>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <fieldset>
-                                            <textarea name="message" rows="6" id="message" placeholder="Your Message"
-                                                required="" style="background-color: rgba(250,250,250,0.3);"></textarea>
-                                        </fieldset>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <fieldset>
-                                            <button type="submit" id="form-submit" class="main-button">Send Message
-                                                Now</button>
-                                        </fieldset>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <!-- ***** Contact Form End ***** -->
                     <div class="right-content col-lg-6 col-md-12 col-sm-12">
-                        <h2>More About <em>Lava</em></h2>
-                        <p>Phasellus dapibus urna vel lacus accumsan, iaculis eleifend leo auctor. Duis at finibus odio.
-                            Vivamus ut pharetra arcu, in porta metus. Suspendisse blandit pulvinar ligula ut elementum.
-                            <br><br>If you need this contact form to send email to your inbox, you may follow our <a
-                                rel="nofollow" href="https://templatemo.com/contact" target="_parent">contact</a> page
-                            for more detail.</p>
+                        <h2><em>保固條款</em></h2>
+                        <p>APE GLASS皆使用高品質與先進的製程生產製造，<br>
+                        所有產品皆用嚴格的製造標準與品質控管測試。<br>
+                        <h5><em>購買APE GLASS產品享有二年無限次保固服務。</em></h5><br>
+                        此保固不涵蓋因惡意破壞不當所造成的損害。<br><br> 
+                        我們保留對於設計、材料和規格的變更權。<br>
+                        若破損後需換新保護貼，請將購買憑證與照片<br> 
+                        發送電子郵件至service@ape-glass.com。<br>
+                        由人員確認後回覆，前五次只需繳交120元作業費，<br>
+                        即可等待收到新的保護貼
+                        </p>
                         <ul class="social">
                             <li><a href="https://fb.com/templatemo"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -343,9 +326,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="sub-footer">
-                        <p>Copyright &copy; 2020 Lava Landing Page
+                        <p>
+                            Copyright &copy; 2020 Lava Landing Page
 
-                        | Designed by <a rel="nofollow" href="https://templatemo.com">TemplateMo</a></p>
+                            | Designed by <a rel="nofollow" href="https://templatemo.com">TemplateMo</a>
+                        </p>
                     </div>
                 </div>
             </div>
